Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-14557

FastFAT leaks every directory that was used

    XMLWordPrintable

Details

    Description

      Our current FastFAT has a major memory leak: it leaks any directory that was referenced (used directory and its parent) forever.
      Indeed, it references the associated FCB twice on creation and only dereferences it once when it's no longer used. It also doesn't delete any caching associated with the said directory.

      How to reproduce? Perform any directory intensive operation and you'll see your memory drop. One good example is trying to unzip ReactOS source code. You'll end with a 0x4D bug check because both FastFAT and Cc will have eaten all the memory.

      Attachments

        1. fastfat_deref_dir.diff
          0.6 kB
          Pierre Schweitzer
        2. fastfat_deref_dir.diff
          0.7 kB
          Pierre Schweitzer
        3. refs_at_boot.txt
          54 kB
          Pierre Schweitzer
        4. refs_at_boot.txt
          56 kB
          Pierre Schweitzer
        5. fastfat_deref_dir.diff
          1.0 kB
          Pierre Schweitzer
        6. fastfat_deref_dir.diff
          1 kB
          Pierre Schweitzer
        7. fastfat_deref_dir.diff
          2 kB
          Pierre Schweitzer
        8. fastfat_deref_dir.diff
          1 kB
          Pierre Schweitzer
        9. fastfat_deref_dir.diff
          2 kB
          Pierre Schweitzer

        Issue Links

          Activity

            People

              Heis Spiter Pierre Schweitzer
              Heis Spiter Pierre Schweitzer
              Votes:
              2 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: